# ADS-8

./: CMakeLists.txt
include/: bst.h
src/: CMakeLists.txt  alg.cpp  main.cpp
test/: AllTests.cpp  CMakeLists.txt  tests.cpp
